# Follow-the-Money

./: P2PFraudDetectorGNN.py  main.py  pyproject.toml
feature_engineering/: fe-p2p.py  features.md
