[project]
name = "follow-the-money"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.18"
dependencies = [
    "fastparquet>=2024.11.0",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.6.1",
]
